--- a/sia20_control/CMakeLists.txt
+++ b/sia20_control/CMakeLists.txt
@@ -50,18 +50,18 @@ add_executable(pose_follow_executer src/pose_follow_executer.cpp)
 add_executable(pose_follow_executer2 src/pose_follow_executer2.cpp)
 add_executable(velocity_checker_node src/velocity_checker.cpp)
 add_executable(log_teacher_data src/log_teacher_data.cpp)
-add_executable(read_teacher_data src/read_teacher_data.cpp)
+#add_executable(read_teacher_data src/read_teacher_data.cpp)
 add_executable(log_pose_data src/log_pose_data.cpp)
-add_executable(predict src/test.cpp)
-add_executable(predict2 src/test3.cpp)
-add_executable(predict2_expansion src/test3_expansion.cpp)
+#add_executable(predict src/test.cpp)
+#add_executable(predict2 src/test3.cpp)
+#add_executable(predict2_expansion src/test3_expansion.cpp)
 #add_executable(repeat src/repeat.cpp)
-add_executable(sakakibara src/sakakibara.cpp)
-add_executable(simple_velocity_control src/simple_velocity_control.cpp)
-add_executable(VNPouring177 src/VNpouring177_base_trajectory_action_client.cpp)
-add_executable(VNPouring115 src/VNpouring115_base_trajectory_action_client.cpp)
-add_executable(log_eef src/log_eef.cpp)
-add_executable(test_average src/test_average.cpp)
+#add_executable(sakakibara src/sakakibara.cpp) # smw
+#add_executable(simple_velocity_control src/simple_velocity_control.cpp)
+#add_executable(VNPouring177 src/VNpouring177_base_trajectory_action_client.cpp)
+#add_executable(VNPouring115 src/VNpouring115_base_trajectory_action_client.cpp)
+#add_executable(log_eef src/log_eef.cpp)
+#add_executable(test_average src/test_average.cpp)
 
 target_link_libraries(joint_trajectory_publisher ${catkin_LIBRARIES})
 #target_link_libraries(joint_trajectory_publisher_ik ${catkin_LIBRARIES})
@@ -88,16 +88,16 @@ target_link_libraries(pose_follow_executer ${catkin_LIBRARIES})
 target_link_libraries(pose_follow_executer2 ${catkin_LIBRARIES})
 target_link_libraries(velocity_checker_node ${catkin_LIBRARIES})
 target_link_libraries(log_teacher_data ${catkin_LIBRARIES})
-target_link_libraries(read_teacher_data ${catkin_LIBRARIES})
+#target_link_libraries(read_teacher_data ${catkin_LIBRARIES})
 target_link_libraries(log_pose_data ${catkin_LIBRARIES})
-target_link_libraries(predict dynet pthread ${catkin_LIBRARIES})
-target_link_libraries(predict2 dynet Gpop pthread ${catkin_LIBRARIES})
-target_link_libraries(predict2_expansion dynet Gpop pthread ${catkin_LIBRARIES})
+#target_link_libraries(predict dynet pthread ${catkin_LIBRARIES})
+#target_link_libraries(predict2 dynet Gpop pthread ${catkin_LIBRARIES})
+#target_link_libraries(predict2_expansion dynet Gpop pthread ${catkin_LIBRARIES})
 #target_link_libraries(repeat fanda ${catkin_LIBRARIES})
-target_link_libraries(sakakibara ${catkin_LIBRARIES})
-target_link_libraries(simple_velocity_control ${catkin_LIBRARIES})
-target_link_libraries(VNPouring177 ${catkin_LIBRARIES} fanda)
-target_link_libraries(VNPouring115 ${catkin_LIBRARIES} fanda)
-target_link_libraries(log_eef ${catkin_LIBRARIES})
-target_link_libraries(test_average Gpop)
+#target_link_libraries(sakakibara ${catkin_LIBRARIES})
+#target_link_libraries(simple_velocity_control ${catkin_LIBRARIES})
+#target_link_libraries(VNPouring177 ${catkin_LIBRARIES} fanda)
+#target_link_libraries(VNPouring115 ${catkin_LIBRARIES} fanda)
+#target_link_libraries(log_eef ${catkin_LIBRARIES})
+#target_link_libraries(test_average Gpop)
 
